Cannot Append Palette As Local Datablock #48965

Closed
opened 2016-07-28 13:46:58 +02:00 by Lawrence D'Oliveiro · 14 comments

The enclosed example file with palette.blend contains a colour palette. I used to be able to use the “Append” command to copy a palette into a new .blend file, but this no longer works: now it seems to be linked, and what is worse, the option to “make local” is greyed out.

Also, the “Append” function now seems to add .blend files appended from as libraries within the file being appended to. I thought this only needed to happen with linking, not appending.

The enclosed example file [with palette.blend](https://archive.blender.org/developer/F328966/with_palette.blend) contains a colour palette. I used to be able to use the “Append” command to copy a palette into a new `.blend` file, but this no longer works: now it seems to be linked, and what is worse, the option to “make local” is greyed out. Also, the “Append” function now seems to add `.blend` files appended from as libraries within the file being appended to. I thought this only needed to happen with linking, not appending.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @ldo

Added subscriber: @ldo

Added subscriber: @Sergey

Added subscriber: @Sergey
Bastien Montagne was assigned by Sergey Sharybin 2016-07-28 14:04:26 +02:00

Bastien, guess this one is for you :)

Bastien, guess this one is for you :)

@ldo technically, append is a link followed by a 'make local' (which also removes the lib). So what’s failing here is the 'make library local' stage ;)

@ldo technically, append is a link followed by a 'make local' (which also removes the lib). So what’s failing here is the 'make library local' stage ;)

This issue was referenced by 035b40337a

This issue was referenced by 035b40337a0351910486c2f9a5a00b28cde6e939

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

OK, I can now bring in a local copy of the palette, thanks.

But I see it still links the file being appended from as a library, which it didn’t used to do before. So it is not removing the library as you say.

OK, I can now bring in a local copy of the palette, thanks. But I see it still links the file being appended from as a library, which it didn’t used to do before. So it is not removing the library as you say.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Bug has resurfaced: appending is causing linking again. And not just palettes this time, either.

Bug has resurfaced: appending is causing linking again. And not just palettes this time, either.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed in 912f46d309, thanks.

Fixed in 912f46d309, thanks.

OK, it works again, thanks.

I suppose I should open a separate bug for the other issue.

OK, it works again, thanks. I suppose I should open a separate bug for the other issue.

Yes please.

Yes please.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48965
No description provided.