Fix T48965: Cannot Append Palette As Local Datablock.

Palette and PaintCurve were totally missing from id_copy/id_make_local switch... :/